Semana 2 Aplicação de segurança

--- a/pom.xml
+++ b/pom.xml
@@ -78,13 +78,13 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
         
-        <!-- Segurança
+        <!-- Segurança -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <scope>compile</scope>
         </dependency>
-         -->
+       
                  
         <!-- POI - Exportação de arquivos 
         <dependency>
