Alteração do menu, alteração do usuario banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3307/marvin?&useSSL=false
-spring.datasource.username=resvut42
-spring.datasource.password=bob-odin
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
