--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <scope>compile</scope>
         </dependency>
        
+       <!-- Jasper Report -->
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+		    <version>6.3.1</version>
+		</dependency>       
                  
         <!-- POI - Exportação de arquivos 
         <dependency>
