--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/marvin?&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/marvin?&useSSL=false
+spring.datasource.username=bobodin
+spring.datasource.password=dinamite-42
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
